--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-google-login": "^3.2.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
